// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> it renders a dark Section 1`] = `
<div>
  <div
    class="sc-gswNZR jLeRGc"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Section /> it renders a default Section 1`] = `
<div>
  <div
    class="sc-gswNZR uUAJC"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Section /> it renders a light Section 1`] = `
<div>
  <div
    class="sc-gswNZR dLynAL"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Section /> it renders a white Section 1`] = `
<div>
  <div
    class="sc-gswNZR clahId"
  >
    this is a Button 
    white
     
  </div>
</div>
`;

exports[`<Section /> renders large decorated section 1`] = `
<div>
  <div
    class="sc-gswNZR fGHcEH"
  >
    <div
      class="sc-dkrFOg VmEAo"
    />
    <div
      class="sc-eDvSVe dfRDwP"
    >
      A decorated dark section
    </div>
  </div>
</div>
`;

exports[`<Section /> renders with correct decoration 1`] = `
<div>
  <div
    class="sc-gswNZR bPmTxc"
  >
    <div
      class="sc-dkrFOg VmEAo"
    />
    <div
      class="sc-eDvSVe dfRDwP"
    >
      A decorated dark section
    </div>
  </div>
</div>
`;
